# RP2040-WizFi360-Gateway-C

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  rp2040-wizfi360-gateway-c-patch.cmake  rp2040-wizfi360-gateway-c_sdk_version.cmake
Viewer/RP2040-WizFi360-Gateway-C_Debug.si4project/Backup/: aws_ethernet_mqtt_thread(5510).c
examples/: CMakeLists.txt
examples/wifi_to_ethernet_aws_mqtt/: CMakeLists.txt  README.md  app_main.c  aws_ethernet_mqtt_thread.c  ethernet_mqtt_certificate.h  wifi_socket_startup.c  wifi_tcp_ap_thread.c  wifi_to_ethernet_aws_mqtt.c
libraries/: CMakeLists.txt
patches/: 03_cmsis_driver_wifi_wizfi360_added_func_for_server.patch  03_wifi_wizfi360_added_func_for_server.patch
port/: CMakeLists.txt  port_common.h
port/aws-iot-device-sdk-embedded-C/inc/: core_mqtt_config.h
port/aws-iot-device-sdk-embedded-C/src/: mqtt_transport_interface.c
port/ioLibrary_Driver/src/: config_all.xml
